Glossary Full Fix

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     coverpage: false,
     // coverpage: ['/', '/fr-fr/'],
     loadSidebar: true,
-    autoHeader: true,
+    autoHeader: false,
     mergeNavbar: true,
     subMaxLevel: 2,
     auto2top: true,
@@ -111,7 +111,7 @@
 <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
 <script src="//unpkg.com/docsify-gifcontrol/dist/docsify-gifcontrol.js"></script>
 <!-- <script src="_plugins/changelog/index.js"></script> -->
-<script src="//unpkg.com/docsify-glossary/dist/docsify-glossary.min.js"></script>
+<script src="/scripts/docsify-glossary.min.js"></script>
 <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
 </body>
 </html>
