--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!-- <link rel="stylesheet" href="_style/nav.css"/> -->
 <!-- <link rel="stylesheet" href="_plugins/changelog/style.css"/> -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
+<link rel="stylesheet" href="_plugins/changelog/style.css"/>
 </head>
 <body>
   <div id="app"></div>
