--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Voiceflow Guide Home 🏠 - Voiceflow Docs</title>
+  <title>Voiceflow Documentation</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Voiceflow (VF) is the central platform for designing, prototyping, and building voice apps.">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -13,10 +13,14 @@
 <!-- <link rel="stylesheet" href="_plugins/changelog/style.css"/> -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
 <link rel="stylesheet" href="_plugins/changelog/style.css"/>
+<link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,577;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
-  <nav></nav>
+  <nav>
+    <a href="#/">EN</a>
+    <a href="#/zh-cn/">中文</a>
+  </nav>
   <script>
     window.$docsify = {
      alias: {
@@ -28,6 +32,7 @@
        '/voiceflow-documentation/integrations':'/blocks/api-block',
       },
     name: 'Voiceflow Docs',
+    logo: 'images/docs-vf.png',
     themeColor: "#162242",
     repo: 'https://voiceflow.github.io/documentation/',
     mergeNavbar: false,
@@ -96,9 +101,15 @@
     
   }
   </script>
+
+  <!-- Theme -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
+
+  <!-- Custom theme stylesheet -->
+  <link rel="stylesheet" href="_style/styles.css">
+
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <!-- docsify-themeable (latest v0.x.x) -->
-<script src="//cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
