--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
        '/voiceflow-documentation/how-voiceflow-works':'/faq/how-voiceflow-works',
        '/voiceflow-documentation/untitled': '/',
        '/voiceflow-documentation/integrations':'/blocks/api-block',
+       '/tutorials/invocation-names':'/faq/invocation-and-activation',
+       '/faq/legal':'/faq/legal/voiceflow-terms-of-service',
+       '/tutorials/advanced-tutorials/':'/tutorials/advanced-tutorials/using-beta-testing-with-your-alexa-skill'
       },
     name: 'Voiceflow Docs',
     logo: 'images/docs-vf.png',
@@ -47,7 +50,7 @@
     loadSidebar: true,
     autoHeader: false,
     mergeNavbar: true,
-    subMaxLevel: 2,
+    subMaxLevel: 3,
     auto2top: true,
     homepage: 'home.md',
     gifcontrol: {
@@ -90,7 +93,7 @@
         '/': 'No Results'
       },
       // Headline depth, 1 - 6
-      depth: 4,
+      depth: 1,
       hideOtherSidebarContent: false, // whether or not to hide other sidebar content
       // To avoid search index collision
       // between multiple websites under the same domain
