added meta image
- added html tags for meta image on share

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta property="og:title" content="Voiceflow | Design, prototype, and build voice apps.">
+  <meta property="og:image" content="https://i.imgur.com/8ksReep.png">
+  <meta property="og:description" content="Visually design, prototype and publish Alexa Skills and Google Actions without writing code.">
+  <meta property="og:url" content="https://i.imgur.com/8ksReep.png">
+  <meta name="twitter:card" content="https://i.imgur.com/8ksReep.png">
+  
   <meta charset="UTF-8">
   <title>Voiceflow Documentation</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Voiceflow (VF) is the central platform for designing, prototyping, and building voice apps.">
+  <meta name="description" content="Voiceflow helps teams design, prototype, and build voice apps.">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <!-- Theme: Simple -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
