--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     loadSidebar: true,
     autoHeader: false,
     alias: {
+      '/quickstart/downloadable-links': '/features/sharing-features?id=share-a-downloadable-project-link',
        '/voiceflow-documentation/untitled/exit-block': '/blocks/exit-block',
        '/home/get-started-with-voiceflow':'/quickstart/get-started-with-voiceflow',
        '/home/what-can-i-do-with-voiceflow':'/quickstart/what-can-i-do-with-voiceflow',
