--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     loadSidebar: true,
     autoHeader: false,
     alias: {
-      '/quickstart/downloadable-links': '/features/sharing-features?id=share-a-downloadable-project-link',
+       '/quickstart/downloadable-links': '/features/sharing-features',
+       '/quickstart/testable-links': '/features/sharing-features',
        '/voiceflow-documentation/untitled/exit-block': '/blocks/exit-block',
        '/home/get-started-with-voiceflow':'/quickstart/get-started-with-voiceflow',
        '/home/what-can-i-do-with-voiceflow':'/quickstart/what-can-i-do-with-voiceflow',
