--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
     loadSidebar: true,
     autoHeader: false,
     alias: {
+       '/blocks/set-block': '/steps/logic-steps',
+       '/blocks/if-block': '/steps/logic-steps',
+       '/blocks/capture-block': '/steps/logic-steps',
+       '/blocks/capture-block': '/steps/logic-steps',
+       '/blocks/stream-block': '/steps/platform-steps-alexa',
+       '/blocks/reminder-block': '/steps/platform-steps-alexa',
+       '/blocks/flow-block': '/steps/logic-steps',
+       '/quickstart/downloadable-links': '/features/sharing-features',
        '/voiceflow-documentation/untitled/exit-block': '/blocks/exit-block',
        '/home/get-started-with-voiceflow':'/quickstart/get-started-with-voiceflow',
        '/home/what-can-i-do-with-voiceflow':'/quickstart/what-can-i-do-with-voiceflow',
